update get working nurses by doctor
